Frontend/analisador_sintatico/tiger.output
Terminais sem uso na gramática

    SWITCH
    CASE


Gramática

    0 $accept: program $end

    1 program: exp

    2 exp: lvalue
    3    | NIL
    4    | LPAREN RPAREN
    5    | INT
    6    | STRING
    7    | MINUS exp
    8    | func_call
    9    | arith_exp
   10    | cmp_exp
   11    | bool_exp
   12    | record_create
   13    | array_create
   14    | lvalue ASSIGN exp
   15    | IF exp THEN exp ELSE exp
   16    | IF exp THEN exp
   17    | WHILE exp DO exp
   18    | FOR ID ASSIGN exp TO exp DO exp
   19    | BREAK
   20    | LET decs IN expseq END
   21    | LPAREN expseq RPAREN

   22 lvalue: ID
   23       | ID LBRACK exp RBRACK
   24       | lvalue LBRACK exp RBRACK
   25       | lvalue DOT ID

   26 func_call: ID LPAREN explist RPAREN

   27 explist: %empty
   28        | explist_nonempty

   29 explist_nonempty: exp
   30                 | explist_nonempty COMMA exp

   31 arith_exp: exp PLUS exp
   32          | exp MINUS exp
   33          | exp TIMES exp
   34          | exp DIVIDE exp

   35 cmp_exp: exp EQ exp
   36        | exp NEQ exp
   37        | exp LT exp
   38        | exp LE exp
   39        | exp GT exp
   40        | exp GE exp

   41 bool_exp: exp AND exp
   42         | exp OR exp

   43 record_create: ID LBRACE record_create_list RBRACE

   44 record_create_list: %empty
   45                   | record_create_list_nonempty

   46 record_create_list_nonempty: record_create_field
   47                            | record_create_list_nonempty COMMA record_create_field

   48 record_create_field: ID EQ exp

   49 array_create: ID LBRACK exp RBRACK OF exp

   50 decs: %empty
   51     | decs dec

   52 dec: tydeclist
   53    | vardec
   54    | fundeclist

   55 tydeclist: tydec
   56          | tydec tydeclist

   57 tydec: TYPE ID EQ ty

   58 ty: ID
   59   | LBRACE tyfields RBRACE
   60   | ARRAY OF ID

   61 tyfields: %empty
   62         | tyfields_nonempty

   63 tyfields_nonempty: tyfield
   64                  | tyfields_nonempty COMMA tyfield

   65 tyfield: ID COLON ID

   66 vardec: VAR ID ASSIGN exp
   67       | VAR ID COLON ID ASSIGN exp

   68 fundeclist: fundec
   69           | fundec fundeclist

   70 fundec: FUNCTION ID LPAREN tyfields RPAREN EQ exp
   71       | FUNCTION ID LPAREN tyfields RPAREN COLON ID EQ exp

   72 expseq: exp
   73       | expseq SEMICOLON exp


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    LOW (258)
    UMINUS (259)
    ID <sval> (260) 18 22 23 25 26 43 48 49 57 58 60 65 66 67 70 71
    STRING <sval> (261) 6
    INT <ival> (262) 5
    COMMA (263) 30 47 64
    COLON (264) 65 67 71
    SEMICOLON (265) 73
    LPAREN (266) 4 21 26 70 71
    RPAREN (267) 4 21 26 70 71
    LBRACK (268) 23 24 49
    RBRACK (269) 23 24 49
    LBRACE (270) 43 59
    RBRACE (271) 43 59
    DOT (272) 25
    PLUS (273) 31
    MINUS (274) 7 32
    TIMES (275) 33
    DIVIDE (276) 34
    EQ (277) 35 48 57 70 71
    NEQ (278) 36
    LT (279) 37
    LE (280) 38
    GT (281) 39
    GE (282) 40
    AND (283) 41
    OR (284) 42
    ASSIGN (285) 14 18 66 67
    ARRAY (286) 60
    IF (287) 15 16
    THEN (288) 15 16
    ELSE (289) 15
    WHILE (290) 17
    FOR (291) 18
    TO (292) 18
    DO (293) 17 18
    LET (294) 20
    IN (295) 20
    END (296) 20
    OF (297) 49 60
    BREAK (298) 19
    NIL (299) 3
    FUNCTION (300) 70 71
    VAR (301) 66 67
    TYPE (302) 57
    SWITCH (303)
    CASE (304)


Não terminais com as regras onde eles aparecem

    $accept (50)
        à esquerda: 0
    program <exp> (51)
        à esquerda: 1
        à direita: 0
    exp <exp> (52)
        à esquerda: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
        à direita: 1 7 14 15 16 17 18 23 24 29 30 31 32 33 34 35 36 37 38 39 40 41 42 48 49 66 67 70 71 72 73
    lvalue <var> (53)
        à esquerda: 22 23 24 25
        à direita: 2 14 24 25
    func_call <exp> (54)
        à esquerda: 26
        à direita: 8
    explist <explist> (55)
        à esquerda: 27 28
        à direita: 26
    explist_nonempty <explist> (56)
        à esquerda: 29 30
        à direita: 28 30
    arith_exp <exp> (57)
        à esquerda: 31 32 33 34
        à direita: 9
    cmp_exp <exp> (58)
        à esquerda: 35 36 37 38 39 40
        à direita: 10
    bool_exp <exp> (59)
        à esquerda: 41 42
        à direita: 11
    record_create <exp> (60)
        à esquerda: 43
        à direita: 12
    record_create_list <efieldlist> (61)
        à esquerda: 44 45
        à direita: 43
    record_create_list_nonempty <efieldlist> (62)
        à esquerda: 46 47
        à direita: 45 47
    record_create_field <efield> (63)
        à esquerda: 48
        à direita: 46 47
    array_create <exp> (64)
        à esquerda: 49
        à direita: 13
    decs <declist> (65)
        à esquerda: 50 51
        à direita: 20 51
    dec <dec> (66)
        à esquerda: 52 53 54
        à direita: 51
    tydeclist <dec> (67)
        à esquerda: 55 56
        à direita: 52 56
    tydec <namety> (68)
        à esquerda: 57
        à direita: 55 56
    ty <ty> (69)
        à esquerda: 58 59 60
        à direita: 57
    tyfields <fieldlist> (70)
        à esquerda: 61 62
        à direita: 59 70 71
    tyfields_nonempty <fieldlist> (71)
        à esquerda: 63 64
        à direita: 62 64
    tyfield <field> (72)
        à esquerda: 65
        à direita: 63 64
    vardec <dec> (73)
        à esquerda: 66 67
        à direita: 53
    fundeclist <dec> (74)
        à esquerda: 68 69
        à direita: 54 69
    fundec <fundec> (75)
        à esquerda: 70 71
        à direita: 68 69
    expseq <explist> (76)
        à esquerda: 72 73
        à direita: 20 21 73


Estado 0

    0 $accept: • program $end

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11

    program        ir ao estado 12
    exp            ir ao estado 13
    lvalue         ir ao estado 14
    func_call      ir ao estado 15
    arith_exp      ir ao estado 16
    cmp_exp        ir ao estado 17
    bool_exp       ir ao estado 18
    record_create  ir ao estado 19
    array_create   ir ao estado 20


Estado 1

   22 lvalue: ID •
   23       | ID • LBRACK exp RBRACK
   26 func_call: ID • LPAREN explist RPAREN
   43 record_create: ID • LBRACE record_create_list RBRACE
   49 array_create: ID • LBRACK exp RBRACK OF exp

    LPAREN  deslocar, e ir ao estado 21
    LBRACK  deslocar, e ir ao estado 22
    LBRACE  deslocar, e ir ao estado 23

    $padrão  reduzir usando a regra 22 (lvalue)


Estado 2

    6 exp: STRING •

    $padrão  reduzir usando a regra 6 (exp)


Estado 3

    5 exp: INT •

    $padrão  reduzir usando a regra 5 (exp)


Estado 4

    4 exp: LPAREN • RPAREN
   21    | LPAREN • expseq RPAREN

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    RPAREN  deslocar, e ir ao estado 24
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11

    exp            ir ao estado 25
    lvalue         ir ao estado 14
    func_call      ir ao estado 15
    arith_exp      ir ao estado 16
    cmp_exp        ir ao estado 17
    bool_exp       ir ao estado 18
    record_create  ir ao estado 19
    array_create   ir ao estado 20
    expseq         ir ao estado 26


Estado 5

    7 exp: MINUS • exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11

    exp            ir ao estado 27
    lvalue         ir ao estado 14
    func_call      ir ao estado 15
    arith_exp      ir ao estado 16
    cmp_exp        ir ao estado 17
    bool_exp       ir ao estado 18
    record_create  ir ao estado 19
    array_create   ir ao estado 20


Estado 6

   15 exp: IF • exp THEN exp ELSE exp
   16    | IF • exp THEN exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11

    exp            ir ao estado 28
    lvalue         ir ao estado 14
    func_call      ir ao estado 15
    arith_exp      ir ao estado 16
    cmp_exp        ir ao estado 17
    bool_exp       ir ao estado 18
    record_create  ir ao estado 19
    array_create   ir ao estado 20


Estado 7

   17 exp: WHILE • exp DO exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11

    exp            ir ao estado 29
    lvalue         ir ao estado 14
    func_call      ir ao estado 15
    arith_exp      ir ao estado 16
    cmp_exp        ir ao estado 17
    bool_exp       ir ao estado 18
    record_create  ir ao estado 19
    array_create   ir ao estado 20


Estado 8

   18 exp: FOR • ID ASSIGN exp TO exp DO exp

    ID  deslocar, e ir ao estado 30


Estado 9

   20 exp: LET • decs IN expseq END

    $padrão  reduzir usando a regra 50 (decs)

    decs  ir ao estado 31


Estado 10

   19 exp: BREAK •

    $padrão  reduzir usando a regra 19 (exp)


Estado 11

    3 exp: NIL •

    $padrão  reduzir usando a regra 3 (exp)


Estado 12

    0 $accept: program • $end

    $end  deslocar, e ir ao estado 32


Estado 13

    1 program: exp •
   31 arith_exp: exp • PLUS exp
   32          | exp • MINUS exp
   33          | exp • TIMES exp
   34          | exp • DIVIDE exp
   35 cmp_exp: exp • EQ exp
   36        | exp • NEQ exp
   37        | exp • LT exp
   38        | exp • LE exp
   39        | exp • GT exp
   40        | exp • GE exp
   41 bool_exp: exp • AND exp
   42         | exp • OR exp

    PLUS    deslocar, e ir ao estado 33
    MINUS   deslocar, e ir ao estado 34
    TIMES   deslocar, e ir ao estado 35
    DIVIDE  deslocar, e ir ao estado 36
    EQ      deslocar, e ir ao estado 37
    NEQ     deslocar, e ir ao estado 38
    LT      deslocar, e ir ao estado 39
    LE      deslocar, e ir ao estado 40
    GT      deslocar, e ir ao estado 41
    GE      deslocar, e ir ao estado 42
    AND     deslocar, e ir ao estado 43
    OR      deslocar, e ir ao estado 44

    $padrão  reduzir usando a regra 1 (program)


Estado 14

    2 exp: lvalue •
   14    | lvalue • ASSIGN exp
   24 lvalue: lvalue • LBRACK exp RBRACK
   25       | lvalue • DOT ID

    LBRACK  deslocar, e ir ao estado 45
    DOT     deslocar, e ir ao estado 46
    ASSIGN  deslocar, e ir ao estado 47

    $padrão  reduzir usando a regra 2 (exp)


Estado 15

    8 exp: func_call •

    $padrão  reduzir usando a regra 8 (exp)


Estado 16

    9 exp: arith_exp •

    $padrão  reduzir usando a regra 9 (exp)


Estado 17

   10 exp: cmp_exp •

    $padrão  reduzir usando a regra 10 (exp)


Estado 18

   11 exp: bool_exp •

    $padrão  reduzir usando a regra 11 (exp)


Estado 19

   12 exp: record_create •

    $padrão  reduzir usando a regra 12 (exp)


Estado 20

   13 exp: array_create •

    $padrão  reduzir usando a regra 13 (exp)


Estado 21

   26 func_call: ID LPAREN • explist RPAREN

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11

    $padrão  reduzir usando a regra 27 (explist)

    exp               ir ao estado 48
    lvalue            ir ao estado 14
    func_call         ir ao estado 15
    explist           ir ao estado 49
    explist_nonempty  ir ao estado 50
    arith_exp         ir ao estado 16
    cmp_exp           ir ao estado 17
    bool_exp          ir ao estado 18
    record_create     ir ao estado 19
    array_create      ir ao estado 20


Estado 22

   23 lvalue: ID LBRACK • exp RBRACK
   49 array_create: ID LBRACK • exp RBRACK OF exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11

    exp            ir ao estado 51
    lvalue         ir ao estado 14
    func_call      ir ao estado 15
    arith_exp      ir ao estado 16
    cmp_exp        ir ao estado 17
    bool_exp       ir ao estado 18
    record_create  ir ao estado 19
    array_create   ir ao estado 20


Estado 23

   43 record_create: ID LBRACE • record_create_list RBRACE

    ID  deslocar, e ir ao estado 52

    $padrão  reduzir usando a regra 44 (record_create_list)

    record_create_list           ir ao estado 53
    record_create_list_nonempty  ir ao estado 54
    record_create_field          ir ao estado 55


Estado 24

    4 exp: LPAREN RPAREN •

    $padrão  reduzir usando a regra 4 (exp)


Estado 25

   31 arith_exp: exp • PLUS exp
   32          | exp • MINUS exp
   33          | exp • TIMES exp
   34          | exp • DIVIDE exp
   35 cmp_exp: exp • EQ exp
   36        | exp • NEQ exp
   37        | exp • LT exp
   38        | exp • LE exp
   39        | exp • GT exp
   40        | exp • GE exp
   41 bool_exp: exp • AND exp
   42         | exp • OR exp
   72 expseq: exp •

    PLUS    deslocar, e ir ao estado 33
    MINUS   deslocar, e ir ao estado 34
    TIMES   deslocar, e ir ao estado 35
    DIVIDE  deslocar, e ir ao estado 36
    EQ      deslocar, e ir ao estado 37
    NEQ     deslocar, e ir ao estado 38
    LT      deslocar, e ir ao estado 39
    LE      deslocar, e ir ao estado 40
    GT      deslocar, e ir ao estado 41
    GE      deslocar, e ir ao estado 42
    AND     deslocar, e ir ao estado 43
    OR      deslocar, e ir ao estado 44

    $padrão  reduzir usando a regra 72 (expseq)


Estado 26

   21 exp: LPAREN expseq • RPAREN
   73 expseq: expseq • SEMICOLON exp

    SEMICOLON  deslocar, e ir ao estado 56
    RPAREN     deslocar, e ir ao estado 57


Estado 27

    7 exp: MINUS exp •
   31 arith_exp: exp • PLUS exp
   32          | exp • MINUS exp
   33          | exp • TIMES exp
   34          | exp • DIVIDE exp
   35 cmp_exp: exp • EQ exp
   36        | exp • NEQ exp
   37        | exp • LT exp
   38        | exp • LE exp
   39        | exp • GT exp
   40        | exp • GE exp
   41 bool_exp: exp • AND exp
   42         | exp • OR exp

    $padrão  reduzir usando a regra 7 (exp)


Estado 28

   15 exp: IF exp • THEN exp ELSE exp
   16    | IF exp • THEN exp
   31 arith_exp: exp • PLUS exp
   32          | exp • MINUS exp
   33          | exp • TIMES exp
   34          | exp • DIVIDE exp
   35 cmp_exp: exp • EQ exp
   36        | exp • NEQ exp
   37        | exp • LT exp
   38        | exp • LE exp
   39        | exp • GT exp
   40        | exp • GE exp
   41 bool_exp: exp • AND exp
   42         | exp • OR exp

    PLUS    deslocar, e ir ao estado 33
    MINUS   deslocar, e ir ao estado 34
    TIMES   deslocar, e ir ao estado 35
    DIVIDE  deslocar, e ir ao estado 36
    EQ      deslocar, e ir ao estado 37
    NEQ     deslocar, e ir ao estado 38
    LT      deslocar, e ir ao estado 39
    LE      deslocar, e ir ao estado 40
    GT      deslocar, e ir ao estado 41
    GE      deslocar, e ir ao estado 42
    AND     deslocar, e ir ao estado 43
    OR      deslocar, e ir ao estado 44
    THEN    deslocar, e ir ao estado 58


Estado 29

   17 exp: WHILE exp • DO exp
   31 arith_exp: exp • PLUS exp
   32          | exp • MINUS exp
   33          | exp • TIMES exp
   34          | exp • DIVIDE exp
   35 cmp_exp: exp • EQ exp
   36        | exp • NEQ exp
   37        | exp • LT exp
   38        | exp • LE exp
   39        | exp • GT exp
   40        | exp • GE exp
   41 bool_exp: exp • AND exp
   42         | exp • OR exp

    PLUS    deslocar, e ir ao estado 33
    MINUS   deslocar, e ir ao estado 34
    TIMES   deslocar, e ir ao estado 35
    DIVIDE  deslocar, e ir ao estado 36
    EQ      deslocar, e ir ao estado 37
    NEQ     deslocar, e ir ao estado 38
    LT      deslocar, e ir ao estado 39
    LE      deslocar, e ir ao estado 40
    GT      deslocar, e ir ao estado 41
    GE      deslocar, e ir ao estado 42
    AND     deslocar, e ir ao estado 43
    OR      deslocar, e ir ao estado 44
    DO      deslocar, e ir ao estado 59


Estado 30

   18 exp: FOR ID • ASSIGN exp TO exp DO exp

    ASSIGN  deslocar, e ir ao estado 60


Estado 31

   20 exp: LET decs • IN expseq END
   51 decs: decs • dec

    IN        deslocar, e ir ao estado 61
    FUNCTION  deslocar, e ir ao estado 62
    VAR       deslocar, e ir ao estado 63
    TYPE      deslocar, e ir ao estado 64

    dec         ir ao estado 65
    tydeclist   ir ao estado 66
    tydec       ir ao estado 67
    vardec      ir ao estado 68
    fundeclist  ir ao estado 69
    fundec      ir ao estado 70


Estado 32

    0 $accept: program $end •

    $padrão  aceitar


Estado 33

   31 arith_exp: exp PLUS • exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11

    exp            ir ao estado 71
    lvalue         ir ao estado 14
    func_call      ir ao estado 15
    arith_exp      ir ao estado 16
    cmp_exp        ir ao estado 17
    bool_exp       ir ao estado 18
    record_create  ir ao estado 19
    array_create   ir ao estado 20


Estado 34

   32 arith_exp: exp MINUS • exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11

    exp            ir ao estado 72
    lvalue         ir ao estado 14
    func_call      ir ao estado 15
    arith_exp      ir ao estado 16
    cmp_exp        ir ao estado 17
    bool_exp       ir ao estado 18
    record_create  ir ao estado 19
    array_create   ir ao estado 20


Estado 35

   33 arith_exp: exp TIMES • exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11

    exp            ir ao estado 73
    lvalue         ir ao estado 14
    func_call      ir ao estado 15
    arith_exp      ir ao estado 16
    cmp_exp        ir ao estado 17
    bool_exp       ir ao estado 18
    record_create  ir ao estado 19
    array_create   ir ao estado 20


Estado 36

   34 arith_exp: exp DIVIDE • exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11

    exp            ir ao estado 74
    lvalue         ir ao estado 14
    func_call      ir ao estado 15
    arith_exp      ir ao estado 16
    cmp_exp        ir ao estado 17
    bool_exp       ir ao estado 18
    record_create  ir ao estado 19
    array_create   ir ao estado 20


Estado 37

   35 cmp_exp: exp EQ • exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11

    exp            ir ao estado 75
    lvalue         ir ao estado 14
    func_call      ir ao estado 15
    arith_exp      ir ao estado 16
    cmp_exp        ir ao estado 17
    bool_exp       ir ao estado 18
    record_create  ir ao estado 19
    array_create   ir ao estado 20


Estado 38
